# mesa

./: .travis.yml  Android.mk  Makefile.am  configure.ac  meson.build  meson_options.txt
debian/: changelog  control  gbp.conf  libgl1-mesa-dri-experimental.install.in  libgl1-mesa-dri.install.in  libgl1-mesa-dri.install.linux.in  mesa-common-dev.docs  rules  watch
debian/patches/: 0001-Fix-meson-build-system-and-build-pvr-driver.patch  07_fix_i915_dri1.patch  08_glx-ignore-BadRequest-errors-from-DRI2Connect.diff  depend-on-llvm-7.patch  llvm7.patch  lower_llvm_and_wayland_deps.patch  meson_for_devuanascii.diff  series
include/GL/internal/: dri_interface.h
include/drm-uapi/: drm_fourcc.h  lima_drm.h
src/: meson.build
src/compiler/nir/: nir_intrinsics.py  nir_lower_io.c  nir_lower_io_to_scalar.c
src/egl/drivers/dri2/: egl_dri2.c  egl_dri2.h  egl_dri2_fallbacks.h  platform_android.c  platform_drm.c  platform_surfaceless.c  platform_wayland.c  platform_x11.c  platform_x11_dri3.c
src/egl/main/: egldevice.h  eglsurface.c
src/gallium/: Android.mk  Makefile.am  meson.build
src/gallium/auxiliary/pipe-loader/: driinfo_gallium.h  pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h
src/gallium/auxiliary/util/: u_math.h  u_screen.c
src/gallium/docs/source/: screen.rst
src/gallium/drivers/etnaviv/: etnaviv_screen.c
src/gallium/drivers/freedreno/: freedreno_screen.c
src/glx/: dri3_glx.c
src/mesa/drivers/dri/pvr/: Makefile.am  Makefile.sources  dri_support.h  mesa_context.c  meson.build  pvr_object_cache.c  pvr_object_cache.h  pvrcompat.c  pvrdrawable.c  pvrdri.c  pvrdri.h  pvrext.c  pvrimage.c  pvrimage.h  pvrmesa.h  pvrqueue.h  pvrutil.c
src/mesa/state_tracker/: st_draw.c
src/util/: disk_cache_os.c  rand_xor.c  u_dynarray.h  u_math.h
(+70 files in other folders)
